--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,43 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+    background-color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: rgba(40, 3, 58, 0.922);
+    font-family: 'Abril Fatface', 'Times New Roman', Times, serif;
+    font-size: 80px;
+}
+
+ul .list-item, .list-title {
+    list-style: none;
+    padding: 10px;
+    border: 1px solid rgba(128, 128, 128, 0.104);
+    background: white;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+input {
+    border: none;
+    width: 100%;
+}
+
+.ocultar {
+    visibility: hidden;
+    margin-left: 5%;
+}
+
+li:hover * {
+    visibility: visible;
+}
